<resources>
    <string name="app_name">GPS Speedometer</string>
    <string name="goal">Goal</string>
    <string name="step_size">Step size</string>
    <string name="steps">steps</string>
    <string name="about">About</string>
    <string name="account">Account</string>
    <string name="goal_summary">Current goal: %,d steps</string>
    <string name="step_size_summary">Current step size: %1$.2f %2$s</string>
    <string name="sign_in">Sign in with your Google account to use the Achievements and Leaderboards features</string>
    <string name="signed_in">Signed in as %s</string>
    <string name="export_summary">Save your data in a .csv file</string>
    <string name="export_title">Export/Backup</string>
    <string name="import_summary">Imports previously saved data</string>
    <string name="import_title">Import/Restore</string>
    <string name="notification">Show notification</string>
    <string name="set_goal">Set goal</string>
    <string name="set_step_size">Set step size</string>
    <string name="sign_out">Sign out</string>
    <string name="file_cant_read">Error: %s can not be read</string>
    <string name="error_file">Error accessing the file: %s</string>
    <string name="error_external_storage_not_available">Error: External storage not available</string>
    <string name="data_saved">Data saved in %s</string>
    <string name="entries_imported">%d entries imported</string>
    <string name="entries_ignored">%d entries were ignored as they did not contain valid data</string>
    <string name="entries_overwritten">%d entries were overwritten with imported data</string>
    <string name="sign_in_necessary">Sign in necessary</string>
    <string name="please_sign_in_with_your_google_account">Please sign in with your Google+ account to use this feature.</string>
    <string name="text_steps">Steps</string>
    <string name="text_color">Text color:</string>
    <string name="background_color">Background color:</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="faq">FAQ</string>
    <string name="goal_reached_notification">Goal reached! %s steps and counting</string>
    <string name="notification_text">%s steps to go</string>
    <string name="total">Total</string>
    <string name="notification_title">Pedometer is counting</string>
    <string name="your_progress_will_be_shown_here_soon">Your progress will be shown here soon</string>
    <string name="average">Average</string>
    <string name="record">Record</string>
    <string name="total_last_7_days">Total last 7 days</string>
    <string name="average_last_7_days">Average last 7 days</string>
    <string name="total_this_month">Total this month</string>
    <string name="average_this_month">Average this month</string>
    <string name="file_already_exists">File already exists. Are you sure you want to overwrite it?</string>
    <string name="about_text_links">This app was created by Thomas Hoffmann (<a href="https://www.j4velin.de">www.j4velin.de</a>) and uses <a href="https://github.com/blackfizz/EazeGraph">EazeGraph</a> by Paul Cech and <a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a> by Sergey Margaritov.\n\nPedometer is open source! Get the code and the full list of contributors from <a href="https://github.com/j4velin/Pedometer">GitHub</a>.\n\n</string>
    <string name="about_app_version">App version: %s</string>
    <string name="since">Since %s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="close">close</string>
    <string name="no_split_active">No split counter active. Click start to count the steps from now on</string>
    <string name="split_count">Split count</string>
    <string name="no_sensor">Sensor not found</string>
    <string name="no_sensor_explain">This app requires a dedicated hardware step sensor - which your device does not have. This feature won\'t run on your device.</string>
    <string name="permission_external_storage">No permission to access external storage</string>
    <string name="notification_settings">Notification settings</string>
    <string name="text_miles">Mile</string>

    <string name="app_name_speed">Speedometer</string>
    <string name="analog">ANALOG</string>
    <string name="digital">DIGITAL</string>
    <string name="map">MAP</string>
    <string name="duration">DURATION</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="cycle">CYCLE</string>
    <string name="car">CAR</string>
    <string name="train">TRAIN</string>
    <string name="start_tracking">START TRACKING</string>
    <string name="km_h">km/h</string>
    <string name="km">km</string>
    <string name="max_speed">MAX SPEED</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="distance">DISTANCE</string>
    <string name="how_fast">How fast?</string>
    <string name="km_h_c">KM/H</string>
    <string name="mph_c">MPH</string>
    <string name="knot_c">KNOT</string>
    <string name="stop_tracing">STOP TRACING</string>
    <string name="privacy_policy_desc">By proceeding you agree\nto Privacy Policy</string>
    <string name="text_privacy_policy">"Privacy Policy</string>
    <string name="butn_start">Start</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_bar_title">GPS Speedometer</string>
    <string name="text_settings">Settings</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="text_share">Share App</string>
    <string name="text_pro">Get PRO</string>
    <string name="text_start">START NOW</string>
    <string name="text_speedo">Speedometer</string>
    <string name="text_menu_pro">GET PRO NOW</string>
    <string name="text_menu_about">About</string>
    <string name="text_menu_share">Share with Friends</string>
    <string name="text_resume">RESUME</string>
    <string name="text_kcal">kcal</string>
    <string name="text_time">Minutes</string>
    <string name="text_average">Average</string>
    <string name="text_total">Total</string>
    <string name="text_step">Step</string>
    <string name="text_calorie">Calorie</string>
    <string name="text_distance">Distance</string>
    <string name="text_times">Time</string>
    <string name="kmh">KMH</string>
    <string name="KMH">km/h</string>
    <string name="rate_us_desc">Please rate 5 stars to support us.\nThank you.</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.gps.speedometer.odometer.speedtracker.pedometer.stepcounter</string>
    <string name="butn_exit">Exit</string>
    <string name="txt_feedback">Feedback</string>
    <string name="text_thanks">No Thanks</string>
    <string name="butn_cancel">Cancel</string>
    <string name="rate_us_title">Rate us</string>
    <string name="dialog_title">Do you want to Exit?</string>
    <string name="avg_speed_graph">Avg Speed</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="text_stop">STOP</string>
    <string name="text_start_now">START</string>
    <string name="title_activity_maps">Map</string>
    <string name="analog_meter">Analog Meter</string>
    <string name="digital_meter">Digital Meter</string>
    <string name="text_map">Map</string>
    <string name="great_app">GPS Speedometer &amp; Pedometer</string>
    <string name="share_desc">Use one of the best Speedometer &amp; Step Counter app.</string>
    <string name="share_with">Share with Friends</string>
    <string name="privacy_policy_link_text" translatable="false">https://www.freeprivacypolicy.com/privacy/view/50c5621471755f1548917ebbe5e90160</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="text_pedometer">Pedometer</string>
    <string name="text_auto_steps">Automatically steps</string>
    <string name="text_auto_steps_desc">Turn On count Automatically steps</string>
    <string name="text_settings_general">General Settings</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_privacy_desc">Read our Privacy Policy &amp; Terms and Conditions</string>
    <string name="text_rate">Rate Us</string>
    <string name="text_feedback">Your feedback is valuable for us.</string>
    <string name="text_pro_now">GET PRO NOW</string>
    <string name="text_premium_desc">Become premium to remove ads</string>
    <string name="text_shares">Share with Friends</string>
    <string name="text_share_desc">Share this app with your friends &amp; family.</string>
    <string name="text_lan_option">Language option</string>
    <string name="text_lan_desc">Choose your Language</string>
    <string name="text_analog">ANALOG</string>
    <string name="text_digital">DIGITAL</string>
    <string name="text_tab_map">MAP</string>
    <string name="text_warning">Warning</string>
    <string name="text_location_permission">Please provide location permission...</string>
    <string name="text_timo">Time</string>
    <string name="text_share_feedback">GPS Speedometer &amp; Pedometer, Your valuable feedback.</string>
    <string name="text_today">TODAY</string>
    <string name="text_report">REPORT</string>
    <string name="text_recognition_permission">Please provide Activity Recognition Permission to start counting steps...</string>
    <string name="text_last_week">LAST WEEk</string>
    <string name="text_enable_gps">Please enable Gps to get current location.</string>
    <string name="text_network_permission">Please Check Internet Connection</string>
    <string name="choose_language">Languages</string>
    <string name="okay">OK</string>
    <string name="text_remove_ads_desc">GPS Speedometer is supported by Ads but now you can remove this!</string>
    <string name="text_btn_remove_now">Remove Now</string>
    <string name="text_loading_ad_please_wait">Loading Ad, please wait</string>
    <string name="dialog_title_overlay">Overlay Permission Request</string>
    <string name="dialog_desc_overlay">Please provide this permission to further enjoy latest features.</string>
    <string name="mesg_locationDisabledSelfHotspot">Enable location service to see scan results.</string>
    <string name="butn_locationSettings">Location</string>
    <string name="text_widget">Add Speedometer/Pedometer widget</string>
    <string name="text_widget_desc">Allow widget to be shown in the background</string>
    <string name="dialog_title_exit">Exit</string>
    <string name="dialog_desc_exit">Do you want to end the process?</string>

</resources>