<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_pro"
        app:actionLayout="@layout/item_menu_layout"
        android:title="@null" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings_icon_24dp"
        android:title="@string/text_settings" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_nav_share_icon_24dp"
        android:title="@string/text_menu_share" />
    <item
        android:id="@+id/nav_rate_us"
        android:icon="@drawable/ic_nav_rateus_icon_24dp"
        android:title="@string/text_rate_us" />
    <item
        android:id="@+id/nav_privacy"
        android:icon="@drawable/ic_nav_privacy_icon_24dp"
        android:title="@string/text_privacy_policy" />
    <!--<item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_nav_about_icon_24dp"
        android:title="@string/text_menu_about" />-->

</menu>