<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    tools:context=".ui.fragment.ReportFragment">

    <TextView
        android:id="@+id/average_value"
        style="@style/TextAppearance.Primary.Bigger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_size"
        android:layout_marginTop="@dimen/margin_medium_size"
        android:gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/settings_heading_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_average"
        style="@style/TextAppearance.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard_size"
        android:text="@string/text_average"
        app:layout_constraintEnd_toEndOf="@+id/average_value"
        app:layout_constraintStart_toStartOf="@+id/average_value"
        app:layout_constraintTop_toBottomOf="@+id/average_value" />

    <TextView
        android:id="@+id/total_value"
        style="@style/TextAppearance.Primary.Bigger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium_size"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:textColor="@color/settings_heading_color"
        app:layout_constraintBottom_toBottomOf="@+id/average_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/average_value" />

    <TextView
        android:id="@+id/text_total"
        style="@style/TextAppearance.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_total"
        app:layout_constraintBottom_toBottomOf="@+id/text_average"
        app:layout_constraintEnd_toEndOf="@+id/total_value"
        app:layout_constraintStart_toStartOf="@+id/total_value"
        app:layout_constraintTop_toTopOf="@+id/text_average" />

    <TextView
        style="@style/TextAppearance.Primary.Big"
        android:id="@+id/emptyData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/no_data_found"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/bargraph1"
        app:layout_constraintEnd_toEndOf="@+id/bargraph1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bargraph1" />

    <org.eazegraph.lib.charts.BarChart
        android:id="@+id/bargraph"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/margin_medium_size"
        android:visibility="gone"
        app:egLegendHeight="35dp"
        app:egShowValues="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_average" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bargraph1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_average"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_small_size"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bargraph1">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_smaller_size"
            android:orientation="horizontal"
            android:paddingStart="@dimen/unknown_dp"
            android:paddingEnd="@dimen/margin_small_size"
            app:chipSpacing="@dimen/margin_medium_size"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/step_graph"
                style="@style/Widget.MaterialComponents.Chip.Choice.ChipStyle"
                android:text="@string/text_step" />

            <!--<com.google.android.material.chip.Chip
                android:id="@+id/calorie_graph"
                style="@style/Widget.MaterialComponents.Chip.Choice.ChipStyle"
                android:text="@string/text_calorie" />-->

            <com.google.android.material.chip.Chip
                android:id="@+id/distance_graph"
                style="@style/Widget.MaterialComponents.Chip.Choice.ChipStyle"
                android:text="@string/text_distance" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_graph"
                style="@style/Widget.MaterialComponents.Chip.Choice.ChipStyle"
                android:text="@string/text_times" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>