<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_gdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_smallest_size"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/appname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/ic_title_new_blue_01e2" />

    <TextView
        android:id="@+id/appname"
        style="@style/TextAppearance.Primary.Big.Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <View
        android:id="@+id/startbutton"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_smallest_size"
        android:background="@drawable/background_splash_button"
        app:layout_constraintBottom_toTopOf="@+id/privacytext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/butn_start"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_primary"
        app:layout_constraintBottom_toBottomOf="@+id/startbutton"
        app:layout_constraintLeft_toLeftOf="@+id/startbutton"
        app:layout_constraintRight_toRightOf="@+id/startbutton"
        app:layout_constraintTop_toTopOf="@+id/startbutton" />

    <TextView
        android:id="@+id/privacytext"
        style="@style/TextAppearance.Secondary.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium_size"
        android:gravity="center"
        android:text="@string/privacy_policy_desc"
        android:textColor="@color/black_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
